fixed line spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,4 +38,5 @@ p {
 
 .stats {
   padding: 10px;
+  line-height: 1.5
 }
